[package]
name = "alistral"
version = "0.6.0"
edition = "2024"
repository = "https://github.com/RustyNova016/alistral"
publish = true
license = "MIT"
description = "A CLI app containing a set of useful tools for Listenbrainz"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
alistral_core = { path = "../alistral_core" }
interzic = { path = "../interzic", optional = true }
musicbrainz-db-lite = { path = "../musicbrainz_db_lite", features = ["pretty_format"] }
symphonize = { path = "../symphonize", optional = true}

# Musicbrainz dependencies
#listenbrainz = "0.8.1"
listenbrainz = { branch = "alistral_version", git = "https://github.com/RustyNova016/listenbrainz-rs.git", default-features = false, features = ["tls-native"]}


itertools = "0.14.0"
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["rc"] }
serde_json = "1.0.145"
extend = "1.2.0"
directories = "6.0.0"
reqwest = { version = "0.12.24", features = ["json"] }
rand = "0.9.2"
regex = "1.12.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros"] }
indoc = "2.0.7"
strsim = "0.11.1"
dotenvy = "0.15.7"
url = "2.5.4"

# Async
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "parking_lot"] }
streamies = "0.2.2"
async-fn-stream = "0.3.2"

# Cli
clap = { version = "4.5.53", features = [
    "unicode",
    "wrap_help",
    "derive",
    "color",
] }
clap_complete = "4.5.61"
clap-markdown = "0.1.5"
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
inquire = "0.9.1"

# Error handling
color-eyre = "0.6.5"
thiserror = "2.0.17"
#snafu = { version = "0.8.9", features = ["rust_1_81", "backtrace"] }

# Macros
bon = "3.8.1"
derive_more = { version = "2.0.1", features = ["full"] }
derive-new = "0.7.0"
derive-getters = "0.5.0"
strum_macros = "0.27.2"

# Tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.13"
tuillez = "0.1.0"

# Debuging
hotpath = { version = "0.7", optional = true, features = ["futures"] }

# Other
zip = "6.0.0"

[features]
default = ["full"]
#default = ["full"]
full = ["musicbrainz", "lookup", "stats", "radio"]

# Commands
musicbrainz = ["symphonize"]
lookup = ["legacy_ent_with_listen"]
radio = ["interzicf"]
stats = []

# Parts
legacy_ent_with_listen = []

# Subcrates
interzicf = ["interzic"]

# Debugging
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off"]

[lints.rust]
async_fn_in_trait = { level = "allow", priority = 1 }

[lints.clippy]
result_large_err = { level = "allow", priority = 1 }

[patch.crates-io]
sequelles = {git = "https://github.com/RustyNova016/sequelles", rev = "99b2aa533ef7e17f935b5647897c4676b588d09c"}
tuillez = {git = "https://github.com/RustyNova016/tuillez", rev = "9760b11841bc29b7101aea62b2f275dd34c6bdae"}
musicbrainz_rs = {git = "https://github.com/RustyNova016/musicbrainz_rs", rev = "60ab4d48a6898cc2fc8e0b6fc9fb774c64cfe8d2"}
listenbrainz_rs = { git = "https://github.com/RustyNova016/listenbrainz_rs", rev = "b859c43602cb9f1de08e1b4e7cf64026c581a26c" }